--- a/index.html
+++ b/index.html
@@ -16,6 +16,14 @@
             <input type="text" id="searchInput">
             <button type="submit" id="searchButton"><i class="fa-solid fa-magnifying-glass" style="color: #333333;"></i></button>
         </div>
+        <div id="resultBlock">
+            <div id="temperatureBlock">
+                <div id="tempIcon"></div>
+                <div id="tempCelsius"></div>
+                <div id="locationName"></div>
+            </div>
+
+        </div>
     </div>
 <script src="script.js"></script>
 </body>
